--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
-  "build": {
-    "outputDirectory": "dist"
-  }
+  "builds": [
+    {
+      "src": "api/index.ts",
+      "use": "@vercel/node"
+    }
+  ]
 }
