--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,15 @@
 {
+  "version": 2,
   "builds": [
     {
-      "src": "node dist/main.js",
+      "src": "dist/main.js",
       "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "dist/main.js"
     }
   ]
 }
